--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-matplotlib
-scikit-learn
+Pillow==6.2.2 
+matplotlib==3.3.4
+scikit-learn==0.24.2 
+scikit-image==0.17.2
+pytest==6.2.5
+flask==2.0.2
 pandas
 numpy
-scikit-image
 tabulate
-pytest == 6.2.5
-Flask==2.0.2
-flask-restx==0.5.1
+# flask-restx==0.5.1
