--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,10 @@ COPY client /exp/client
 COPY requirements.txt /exp/requirements.txt
 RUN apt-get update && apt-get install -y python3 python3-pip
 RUN pip3 install --no-cache-dir -r /exp/requirements.txt
-RUN mkdir /exp/mnist_example/models
+# RUN mkdir /exp/mnist_example/models
 WORKDIR /exp
-RUN python3 ./mnist_example/main.py
-CMD ["python3", "./api/app.py"]
+EXPOSE 5000
+
+# RUN python3 ./mnist_example/main.py
+# CMD ["python3", "./api/app.py"]
+CMD ["flask", "run", "--host=0.0.0.0"]
